# duktape4k

./: .gitignore  README.md
core/: build.gradle.kts  settings.gradle.kts
core/src/main/kotlin/aerb/foo/: DukContext.kt  DuktapeEngine.kt  Test.kt
generator/: build.gradle.kts  functions.txt  settings.gradle.kts
generator/src/main/kotlin/ca/aerb/duktape4k/generator/: CGenerator.kt  CTypeConverter.kt  Domain.kt  JniImplementation.kt  KGenerator.kt  KotlinImplementation.kt  ParseFunctions.kt  Parser.kt  ScrapeApi.kt  Targets.kt  Tokenizer.kt  Utils.kt
jni/: CMakeLists.txt  duktape-jni-autogen.c  duktape-jni.c  duktape-jni.h
